# markitdown-mcp

./: .gitignore  CONTRIBUTING.md  KNOWN_ISSUES.md  LICENSE  MANIFEST.in  README.md  install-all-deps.sh  mcp_config.json  mdconvert.py  pyproject.toml  pytest.ini  requirements-all.txt  requirements.txt  run_server.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  test.yml
markitdown_mcp/: __init__.py  server.py
tests/: README.md  __init__.py  conftest.py  test_data_generator.py
tests/compatibility/: test_dependencies.py  test_platforms.py  test_python_versions.py
tests/fixtures/documents/audio/: music.mp3.txt  speech.wav.txt
tests/fixtures/documents/corrupted/: broken.xml  invalid.json  malformed.csv
tests/fixtures/documents/data/: employees.csv  products.csv  sample.json
tests/fixtures/documents/large/: large_data_1mb.json
tests/fixtures/documents/office/: document.docx.txt  presentation.pptx.txt  spreadsheet.xlsx.txt
tests/fixtures/documents/text/: sample.md  sample.rst  unicode.txt
tests/fixtures/documents/web/: catalog.xml  simple.html
tests/fixtures/expected_outputs/: employees_csv_expected.md  sample_json_expected.md  simple_txt_expected.md
tests/fixtures/malicious/: path_traversal_....__....__....__etc__passwd  path_traversal_.._.._.._windows_system32_config_sam  path_traversal_.._2f.._2f.._2fetc_2fpasswd  path_traversal__2e_2e_2f_2e_2e_2f_2e_2e_2fetc_2fpasswd  path_traversal_normal_file.txt
tests/helpers/: __init__.py  assertions.py  file_utils.py
tests/integration/: __init__.py  test_claude_integration.py  test_file_conversion.py  test_mcp_server_integration.py  test_mcp_server_integration.py.example
tests/performance/: test_concurrent.py  test_large_files.py  test_memory_usage.py
tests/security/: test_dos_protection.py  test_malicious_files.py  test_path_traversal.py
tests/unit/: __init__.py  test_convert_directory_tool.py  test_convert_file_tool.py  test_convert_file_tool.py.example  test_list_formats_tool.py  test_mcp_protocol.py
