[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markitdown-mcp"
version = "1.0.0"
description = "A Model Context Protocol server for converting documents to Markdown using MarkItDown"
authors = [
    {name = "MarkItDown MCP", email = "noreply@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["mcp", "markitdown", "markdown", "document-conversion", "model-context-protocol"]

dependencies = [
    "markitdown>=0.0.1a2",
    "pypdf>=3.17.0",
    "python-pptx>=0.6.21",
    "pillow>=10.0.0",
    "python-magic>=0.4.27",
    "pdf2image>=1.16.3",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/trsdn/markitdown-mcp"
Repository = "https://github.com/trsdn/markitdown-mcp"
Issues = "https://github.com/trsdn/markitdown-mcp/issues"

[project.scripts]
markitdown-mcp = "markitdown_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["markitdown_mcp*"]

[tool.setuptools.package-data]
markitdown_mcp = ["*.json"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true